force-app/main/default/objects/BankAccount__c/BankAccount__c.object-meta.xml
<CustomObject>
    <label>BankAccount</label>
    <nameField>
        <label>BankAccount Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BankAccounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>