force-app/main/default/objects/BankAccount__c/fields/Account_holder_name__c.field-meta.xml
<CustomField>
    <fullName>Account_holder_name__c</fullName>
    <label>Account holder name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>