force-app/main/default/objects/BankAccount__c/fields/Bank_account_number__c.field-meta.xml
<CustomField>
    <fullName>Bank_account_number__c</fullName>
    <label>Bank account number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>