force-app/main/default/objects/BankAccount__c/fields/Firm_name__c.field-meta.xml
<CustomField>
    <fullName>Firm_name__c</fullName>
    <label>Firm name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>