force-app/main/default/objects/BankAccount__c/fields/intrest_rate__c.field-meta.xml
<CustomField>
    <fullName>intrest_rate__c</fullName>
    <label>intrest rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>