force-app/main/default/objects/BankAccount__c/fields/Locations__c.field-meta.xml
<CustomField>
    <fullName>Locations__c</fullName>
    <label>Locations</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Banglore</fullName>
            </value>
            <value>
                <fullName>Chittor</fullName>
            </value>
            <value>
                <fullName>Hyderabad</fullName>
            </value>
            <value>
                <fullName>Kadapa</fullName>
            </value>
            <value>
                <fullName>Kurnool</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>