force-app/main/default/objects/BankAccount__c/fields/maximum_Amount_of_withdraws__c.field-meta.xml
<CustomField>
    <fullName>maximum_Amount_of_withdraws__c</fullName>
    <label>maximum Amount of withdraws</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>