force-app/main/default/objects/BankAccount__c/fields/maximum_number_of_withdraws__c.field-meta.xml
<CustomField>
    <fullName>maximum_number_of_withdraws__c</fullName>
    <label>maximum number of withdraws</label>
    <length>5</length>
    <type>Text</type>
</CustomField>