force-app/main/default/objects/BankAccount__c/fields/Service_charges__c.field-meta.xml
<CustomField>
    <fullName>Service_charges__c</fullName>
    <label>Service charges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>