force-app/main/default/objects/BankAccount__c/listViews/Saving_Accounts_Vies.listView-meta.xml
<ListView>
    <fullName>Saving_Accounts_Vies</fullName>
    <columns>NAME</columns>
    <columns>Account_holder_name__c</columns>
    <columns>Bank_account_number__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>BankAccount__c.Savings_Account</value>
    </filters>
    <label>Saving Accounts View</label>
</ListView>